feat(challenges): improve collaboration and keyboard UX
